# Aether-Lib

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js  testing  testing.rs
.github/workflows/: build.yml  docs.yml  lint.yml  rust.yml  tests.yml
.vim/: coc-settings.json
aether_lib/: all.html  index.html  sidebar-items.js
aether_lib/acknowledgement/: constant.MAX_WINDOW.html  index.html  sidebar-items.js  struct.Acknowledgement.html  struct.AcknowledgementCheck.html  struct.AcknowledgementList.html
aether_lib/config/: index.html  sidebar-items.js  struct.AetherConfig.html  struct.Config.html  struct.HandshakeConfig.html  struct.LinkConfig.html
aether_lib/encryption/: constant.IV_SIZE.html  constant.KEY_SIZE.html  constant.TAG_SIZE.html  index.html  sidebar-items.js  struct.AetherCipher.html  struct.Encrypted.html
aether_lib/error/: enum.AetherError.html  index.html  sidebar-items.js
aether_lib/identity/: constant.RSA_SIZE.html  index.html  sidebar-items.js  struct.Id.html  struct.PublicId.html
aether_lib/link/: fn.needs_ack.html  index.html  sidebar-items.js  struct.Link.html
aether_lib/packet/: enum.PType.html  index.html  sidebar-items.js  struct.Packet.html  struct.PacketFlags.html  struct.PacketMeta.html
aether_lib/peer/: enum.Connection.html  index.html  sidebar-items.js  struct.Aether.html  struct.Failure.html  struct.Initialized.html  struct.Peer.html
aether_lib/tracker/: index.html  sidebar-items.js  struct.ConnectionRequest.html  struct.TrackerPacket.html
aether_lib/util/: fn.compile_u16.html  fn.compile_u32.html  fn.gen_nonce.html  fn.xor.html  index.html  sidebar-items.js
benches/: packet_compiling.rs
src/: acknowledgement.rs  acknowledgment.rs  config.rs  error.rs  lib.rs  link.rs  main.rs  packet.rs  tracker.rs  tracker_setup.rs  util.rs
src/aether_lib/: acknowledgement.rs.html  config.rs.html  error.rs.html  lib.rs.html  packet.rs.html  tracker.rs.html  util.rs.html
src/encryption/: mod.rs
src/identity/: mod.rs
src/link/: decryptionthread.rs  mod.rs  (+2 more)
tests/: aether_test.rs  link_test.rs
(+48 files in other folders)
