[package]
name = "aether_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aether_lib"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
home = "0.5"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
clippy = "*"
