[package]
name = "aether_lib"
version = "0.1.0"
edition = "2018"
rust-version = "1.60"
authors = [ "Anish Sharma <aneeshsharma15@outlook.com>",
            "Arjun Syam <arjun.syam23@gmail.com>",
            "Dev Sony <devsony52@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Prototype-Aether/Aether-Lib"
homepage = "https://github.com/Prototype-Aether/Aether-Lib"
description = """
A library that provides P2P communication for Prototype Aether. Contains the
implementations of the Aether Protocol. This library can be used to develop P2P
applications.
"""
caregories = ["network-programming"]
keywords = ["p2p", "communication", "general-purpose", "udp", "udp-holepunching"]

# Github workflows not needed
exclude = [
    ".github/workflows"
]

[lib]
name = "aether_lib"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
home = "0.5"
log = "0.4"
thiserror = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
crossbeam = "0.8"

[package.metadata.docs.rs]
all-features = true
